k8s/staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-staging
  namespace: staging
  labels:
    app: flask-app
    env: staging
    tier: frontend
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: flask-app
      env: staging
  template:
    metadata:
      labels:
        app: flask-app
        env: staging
    spec:
      containers:
      - name: flask-app
        image: kikyputraa/devops-playground:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        
        # 1. Resource Management
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"
            
        # 2. Health Checks
        livenessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 10

        # 3. Security Context
        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          runAsUser: 1000
