k8s/staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service-staging
  namespace: staging
spec:
  selector:
    app: flask-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  type: NodePort
